2000-10-12  Gary Houston  <ghouston@arglist.com>

	* rx/re-low.scm (compile-posix-re->c-struct cre-search, cre-search?):
	use (regex spencer).

	* init.scm: use the guilerxspencer module, distributed
	separately, instead of the regex routines in guile-core.
	Scsh takes advantage of the support for embedded ASCII nuls
	in Spencer's library.

2000-09-14  Gary Houston  <ghouston@arglist.com>

	* lib/string-lib.scm (string->list): fix a known scsh bug:
	string->list didn't work at all.

2000-09-07  Gary Houston  <ghouston@arglist.com>

	* alt-syntax.scm (define-syntax): quote ,name when consing it to
	form.

2000-09-04  Gary Houston  <ghouston@arglist.com>

	* README: updated.  guile-scsh is now based on scsh 0.5.2.
	mention some bugs in the INCOMPAT file: more work is needed.

2000-08-30  Gary Houston  <ghouston@arglist.com>

	* char-set.scm (string-iter): renamed to char-set-string-iter,
	so it doesn't conflict with lib/string-lib.scm:string-iter.
	should be fixed by module system instead.
	only called by char-set-invert! and char-set-intersection! in
	char-set.scm.

2000-08-28  Gary Houston  <ghouston@arglist.com>

	* rx/oldfuns.scm: don't redefine Guile primitives.

2000-08-23  Gary Houston  <ghouston@arglist.com>

	* compile-posix-re->c-struct, cre-search, cre-search?: rewritten
	using Guile regexp primitives.  not particularly optimal nor
	necessarily complete.

2000-08-21  Gary Houston  <ghouston@arglist.com>

	* rx/re-low.scm (clean-up-cres): make this a no-op.

2000-08-20  Gary Houston  <ghouston@arglist.com>

	* sighandlers.scm (maybe-define-signal), errno.scm (maybe-define-eno):
	use string-downcase, not string-downcase!.

	* init.scm (structure-ref): defined bogusly: scheme48 module system
	is not supported.

	* init: load new files.
	* lib: ccp.scm, list-lib.scm, string-lib.scm: new files from
	scsh-0.5.2.

	* lib: new directory.

	* init.scm (rx, if-sre-form): defined, from scsh old-packages.scm.

	* init.scm: load new files.

	* rx: new subdirectory.
	